--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: calc(100vh - var(--mix-header-height));
     box-sizing: border-box;
+    position: relative;
   }
 
   &__chat-bubble {
