--- a/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
+++ b/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
@@ -1,6 +1,6 @@
 .creation-dialog {
-  width: 60vw;
-  max-width: 800px;
+  width: 55vw;
+  min-width: 800px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -15,10 +15,6 @@
 
     h3 {
       margin-right: auto;
-    }
-
-    button {
-      margin-left: 5px;
     }
   }
 
