add sidebar animation

--- a/libs/mix.share/src/components/data-table/data-table.component.html
+++ b/libs/mix.share/src/components/data-table/data-table.component.html
@@ -25,7 +25,8 @@
     </tui-hosted-dropdown>
   </p>
 
-  <div class="mix-data-table__additional-toolbar">
+  <!-- TODO: Comment until feature stable -->
+  <!-- <div class="mix-data-table__additional-toolbar">
     <button *ngIf="showSubTable"
             [appearance]="'accent'"
             [size]="'xs'"
@@ -35,7 +36,7 @@
     <button [size]="'xs'"
             (click)="showSubTable = true"
             tuiButton>Show Next Page</button>
-  </div>
+  </div> -->
 
   <div class="mix-data-table__main-container"
        cdkDropListGroup>
