--- a/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
+++ b/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
@@ -4,13 +4,16 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: var(--tui-base-01);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
   &__header {
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     border-bottom: 1px solid var(--tui-base-04);
 
     h3 {
@@ -34,12 +37,12 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      padding: 0 5px;
+      padding: 0 15px;
       margin-bottom: 5px;
     }
 
     .workspace {
-      padding: 0 10px;
+      padding: 0 15px;
     }
 
     tui-tabs {
