--- a/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
+++ b/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
@@ -4,7 +4,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  border-top-left-radius: 10px;
   background-color: var(--tui-base-01);
+  border-left: 1px sold var(--tui-base-04);
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
