--- a/apps/mix-portal/src/styles/utilities.scss
+++ b/apps/mix-portal/src/styles/utilities.scss
@@ -37,3 +37,41 @@
     }
   }
 }
+
+.mix-workspace-container {
+  width: 100%;
+
+  &__header {
+    background-color: #f0f4f9;
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+    border-bottom: 1px solid var(--tui-base-04);
+    height: var(--mix-sub-header-height);
+
+    .separator {
+      content: '';
+      display: block;
+      height: 60%;
+      width: 1px;
+      background-color: var(--tui-base-04);
+      margin: 0 15px 0 25px;
+    }
+
+    .toggle-left-side {
+      margin-left: auto;
+    }
+  }
+
+  &__container {
+    display: flex;
+    width: 100%;
+    // 100px for header + toolbar
+    height: calc(100vh - 100px);
+  }
+
+  &__main-workspace {
+    width: 100%;
+    height: 100%;
+  }
+}
