feat(portal): add monaco editor

--- a/apps/mix-portal/src/app/routes/portal/detail-template/detail-template.component.html
+++ b/apps/mix-portal/src/app/routes/portal/detail-template/detail-template.component.html
@@ -1,1 +1,3 @@
 <p>detail-template works!</p>
+<ngx-monaco-editor [(ngModel)]="code"
+                   [options]="codeEditorOptions"></ngx-monaco-editor>
