--- a/apps/mix-portal/src/styles/utilities.scss
+++ b/apps/mix-portal/src/styles/utilities.scss
@@ -40,14 +40,16 @@
 
 .mix-workspace-container {
   width: 100%;
+  height: 100%;
 
   &__header {
     background-color: #f0f4f9;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     padding: 5px 15px;
     border-bottom: 1px solid var(--tui-base-04);
-    height: var(--mix-sub-header-height);
+    height: var(--mix-header-height);
 
     .separator {
       content: '';
@@ -61,14 +63,34 @@
     .toggle-left-side {
       margin-left: auto;
     }
+
+    .action {
+      margin-right: 15px;
+      display: flex;
+      align-items: center;
+
+      .label {
+        margin: 0 5px;
+        opacity: 0.7;
+      }
+    }
   }
 
   &__container {
     display: flex;
     width: 100%;
-    // 100px for header + toolbar
-    height: calc(100vh - 100px);
     overflow: auto;
+    height: 100%;
+  }
+
+  &__sub-header {
+    height: var(--mix-sub-header-height);
+    background-color: var(--tui-base-03);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0 20px;
+    background-color: var(--tui-base-01);
   }
 
   &__main-workspace {
