feat(portal): add tour guide

--- a/apps/mix-portal/src/styles/overwrite.scss
+++ b/apps/mix-portal/src/styles/overwrite.scss
@@ -306,3 +306,13 @@ tui-accordion-item.folder-file {
     background: unset !important;
   }
 }
+
+.joyride-step {
+  &__container {
+    border-radius: 10px;
+  }
+}
+
+.joyride-button {
+  border-radius: 10px;
+}
