--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'styles/utilities.scss';
 @import 'styles/overwrite.scss';
+@import 'styles/global.scss';
 // @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 html,
