--- a/apps/mix-portal/src/app/routes/portal/list-theme/list-theme.component.html
+++ b/apps/mix-portal/src/app/routes/portal/list-theme/list-theme.component.html
@@ -1,6 +1,16 @@
 <div class="mix-workspace-container">
   <div class="mix-workspace-container__header">
-    ABC
+    <div class="mix-workspace-container__toolbar-item">
+      {{ totalTheme }} Theme Available
+    </div>
+
+    <div class="mix-workspace-container__toolbar-item">
+      <button [size]="'s'"
+              (click)="onImportThemeClick()"
+              tuiButton>
+        <i-tabler name="circle-plus"></i-tabler> <span> New Theme </span>
+      </button>
+    </div>
   </div>
 
   <div class="mix-workspace-container__container">
@@ -27,3 +37,10 @@
     </div>
   </div>
 </div>
+
+
+<ng-template #importTheme>
+  <mix-sidebar-container>
+    <mix-theme-import [mode]="'Quick'"></mix-theme-import>
+  </mix-sidebar-container>
+</ng-template>
