--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -1,8 +1,10 @@
 @import 'styles/utilities.scss';
 @import 'styles/overwrite.scss';
 @import 'styles/global.scss';
-// @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import 'styles/variables.scss';
+
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html,
 body {
   height: 100%;
@@ -12,14 +14,6 @@ body {
 body {
   margin: 0 !important;
   padding: 0 !important;
-}
-
-:root {
-  --mix-header-height: 47px;
-  --mix-sub-header-height: 47px;
-  --font-family: 'Lexend Deca', 'Roboto', -apple-system, BlinkMacSystemFont,
-    'Apple Color Emoji', 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 .cdk-drag-preview {
