--- a/apps/mix-portal/src/styles/utilities.scss
+++ b/apps/mix-portal/src/styles/utilities.scss
@@ -36,6 +36,16 @@
       margin-right: 15px;
     }
   }
+
+  &__separator {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--tui-back-04);
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .mix-workspace-container {
@@ -63,17 +73,6 @@
     .toggle-left-side {
       margin-left: auto;
     }
-
-    .action {
-      margin-right: 15px;
-      display: flex;
-      align-items: center;
-
-      .label {
-        margin: 0 5px;
-        opacity: 0.7;
-      }
-    }
   }
 
   &__container {
@@ -96,5 +95,18 @@
   &__main-workspace {
     width: 100%;
     height: 100%;
+  }
+
+  &__toolbar-item {
+    padding: 8px 8px;
+
+    &.--disabled {
+      opacity: 0.3;
+      pointer-events: none;
+    }
+
+    i-tabler {
+      margin-right: 3px;
+    }
   }
 }
