--- a/libs/mix.share/src/components/sidebar-container/sidebar-container.component.html
+++ b/libs/mix.share/src/components/sidebar-container/sidebar-container.component.html
@@ -10,6 +10,7 @@
       </button>
     </div>
   </div>
-
-  <ng-content></ng-content>
+  <div class="sidebar-container__content">
+    <ng-content></ng-content>
+  </div>
 </div>
