--- a/libs/mix.share/src/components/mix-theme-import/mix-theme-import.component.scss
+++ b/libs/mix.share/src/components/mix-theme-import/mix-theme-import.component.scss
@@ -3,4 +3,10 @@
   height: 100%;
   background-color: var(--tui-base-01);
   padding: 20px;
+
+  &__footer {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
